--- a/productSurvey/product_survey.html
+++ b/productSurvey/product_survey.html
@@ -21,7 +21,9 @@
     <option value="perfume">Perfume</option>
     <option value="cream">Cream</option>
     <option value="oils">Oils</option>
-  </select><br>
+  </select><br><br>
+  <label for="experince">User experience:</label><br>
+  <textarea id="experince" rows="5" cols="30" placeholder="Enter your experience here" required></textarea><br>
   <label for="feedbackText">Feedback:</label><br>
   <textarea id="feedbackText" rows="5" cols="30" placeholder="Enter your feedback here" required></textarea><br>
 <button id="submitBtn">Submit Feedback</button>
@@ -33,6 +35,7 @@
   <p>Email: <span id="userEmail"></span></p>
   <p>Job: <span id="userJob"></span></p>
   <p>Designation: <span id="userDesignation"></span></p>
+  <p>User experience: <span id="userExperince"></span></p>
   <p>Feedback for  <span id="userProductChoice"></span>: <span id="userFeedback"></span></p>
 </div>
 <script src="./product_survey.js"></script>
