--- a/weatherReport/weather_report.html
+++ b/weatherReport/weather_report.html
@@ -7,8 +7,10 @@
    <h1>Weather Report</h1>
 
   <form id="weatherForm">
-    <label for="city">Enter City:</label>
-    <input type="text" id="city" name="city">
+    <label for="lattitude">Enter Lattitude:</label>
+    <input type="text" id="lattitude" name="lattitude">
+    <label for="longitude ">Enter Longitude :</label>
+    <input type="text" id="longitude" name="longitude">
     <button type="submit">Get Weather</button>
   </form>
 
